--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,54 @@
-@import "~bootstrap/dist/css/bootstrap.min.css";
+body{
+    background-color: green;
+}
+
+.card{
+    margin:1%;
+    background-color: white;
+    border-radius: 10px;
+    width: 12%
+}
+
+.card-number{
+font-size: 5vw;
+text-align:center;
+margin: 20% 0 20% 0
+}
+
+.card-icon{
+font-size: 2.5vw;
+margin:0 5% 0 5%;
+}
+
+.icon-top{
+    text-align:left;
+}
+
+.icon-bottom{
+    text-align:right;
+    }
+
+
+    .button-container{
+        display:flex;
+        flex-direction:column;
+        align-items: center;
+        margin: 1% 0 1% 0 
+    }
+.generate-button{
+    display:flex;
+    justify-content: center;
+    width: 8%;
+    font-size: 1vw
+
+}
+.timer-start{
+    width:8%;
+margin-bottom: 1%;
+}
+.timer{
+    display:none;
+    background: #64a564;
+    border-radius: 10px;
+    padding: 1% 2% 1% 2%;
+}
